<resources>
    <string name="app_name">LeBo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login_now">Đăng nhập \nngay</string>
    <string name="text_input_email">Nhập email</string>
    <string name="text_input_password">Nhập mật khẩu</string>
    <string name="text_login_OTP">Đăng nhập OTP</string>
    <string name="text_forgot_password">Quên mật khẩu ?</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_signup">Đăng kí</string>
    <string name="text_question_signup">Chưa có tài khoản?. </string>
    <string name="title_home">Trang chủ</string>
    <string name="title_account">Tài khoản</string>
    <string name="mess_required_field_email">Vui lòng nhập email !</string>
    <string name="mess_validate_email_failed">Email không đúng định dạng !</string>
    <string name="mess_required_field_password">Vui lòng nhập mật khẩu !</string>
    <string name="mess_validate_password_failed">Mật khẩu phải ít nhất 6 kí tự !</string>
    <string name="mess_required_field_confirm_password">Vui lòng xác nhận lại mật khẩu !</string>
    <string name="mess_validate_confirm_password_failed">Mật khẩu xác nhận không khớp !</string>
    <string name="text_login_otp">Đăng nhập \nOTP</string>
    <string name="text_notification_login_otp">Mã sẽ được gửi tới %s </string>
    <string name="back">Quay lại</string>
    <string name="something">Some thing</string>
    <string name="message_wait_for_send_request">Vui lòng yêu cầu lại sau </string>
    <string name="resend_otp">Gửi lại ?</string>
    <string name="mess_required_field_otp">Vui lòng nhập mã OTP</string>
    <string name="mess_validate_otp_failed">Nhâp mã OTP gồm 6 số !</string>
    <string name="text_relogin">Vui lòng đăng nhập để tiếp tục !</string>
    <string name="text_title_forgot_password">quên mật\nkhẩu</string>
    <string name="text_confirm">Xác nhận</string>
    <string name="text_suggest_forgot_password">Nhập email đã đăng kí !</string>
    <string name="title_library">Thư viện</string>
    <string name="title_favorite">Yêu thích</string>
    <string name="string_default">string</string>
    <string name="title_notification">Thông báo</string>
    <string name="title_bill_ordered">Đơn hàng của bạn</string>
    <string name="title_change_password">Thay đổi mật khẩu</string>
    <string name="title_help">Trợ giúp</string>
    <string name="text_logout">Đăng xuất</string>
    <string name="text_cancel">Hủy bỏ</string>
    <string name="text_notification_not_login">Bạn chưa đăng nhập !</string>
    <string name="text_question_logout">Bạn có muốn đăng xuất không ?</string>
    <string name="text_changed_password">Đổi mật khẩu</string>
    <string name="text_input_new_password">Nhập mật khẩu mới</string>
    <string name="text_old_password">Mật khẩu cũ</string>
    <string name="text_new_password">Mật khẩu mới</string>
    <string name="text_confirm_password">Xác nhận mật khẩu mới</string>
    <string name="mess_field_blank">Trường này không chấp nhận khoảng trắng</string>
    <string name="text_search">Tìm kiếm</string>
    <string name="mess_error_refresh_data">Có lỗi xảy ra khi làm mới dữ liệu. Thử lại sau !</string>
    <string name="text_view_more">Xem thêm</string>
    <string name="text_outstanding">Nổi bật</string>
    <string name="text_author_interested">Quan tâm</string>
    <string name="text_review">Nhận xét</string>
    <string name="text_another_book">Các sách khác cùng loại</string>
    <string name="text_close">Đóng</string>
    <string name="text_add_to_cart">Thêm vào giỏ</string>
    <string name="text_share">Chia sẻ</string>
    <string name="text_author">Tác giả</string>
    <string name="text_language">Ngôn ngữ</string>
    <string name="text_genre">Thể loại</string>
    <string name="filter_view_http_booki">LeBo</string>
    <string name="text_set_favorite_failed">Có lỗi xảy ra. Vui lòng thử lại sau.</string>
    <string name="message_delete_success">Đã xóa khỏi giỏ hàng</string>
    <string name="message_insert_success">Đã thêm vào giỏ</string>
    <string name="message_remove_item_cart_success">Đã bỏ khỏi giỏ !</string>
    <string name="message_id_book_invalid">Quyển sách này không tồn tại !</string>
    <string name="text_question_remove">Bạn có chắc muốn xóa không !</string>
    <string name="text_cart">Giỏ hàng</string>
    <string name="text_buy_all">Mua tất</string>
    <string name="text_total">Tổng :</string>
    <string name="text_order">Đặt Hàng</string>
    <string name="text_cart_empty">Chưa có mặt hàng nào !</string>
    <string name="text_checkout">Thanh toán</string>
    <string name="text_bill">Hóa đơn</string>
    <string name="text_total_price">Tổng tiền</string>
    <string name="text_discount">Mã giảm giá</string>
    <string name="text_default_discount">- 0đ</string>
    <string name="text_ship_price">Phí vận chuyển</string>
    <string name="text_discount_of_ship">Giảm giá vận chuyển</string>
    <string name="text_total_money_to_be_paid">Tổng thanh toán</string>
    <string name="text_choose_discount">Chọn mã giảm giá</string>
    <string name="text_pay">Thanh toán</string>
    <string name="text_add">Thêm</string>
    <string name="text_address">Địa chỉ</string>
    <string name="text_get_location">Lấy vị trí</string>
    <string name="text_note">Ghi chú</string>
    <string name="text_cash_on_delivery">Thanh toán khi nhận hàng</string>
    <string name="text_payment_by_wallet">Thanh toán bằng thẻ</string>
    <string name="text_remind_with_shop">Nhắc nhở với chủ cửa hàng</string>
    <string name="text_field_addrees_empty">Vui lòng nhập địa chỉ</string>
    <string name="mess_bill_is_empty">Cần ít nhất mua một quyển sách !</string>
    <string name="text_phone">SĐT liên hệ</string>
    <string name="text_remind_phone">Nhập đúng để đảm bảo có thể nhận hàng</string>
    <string name="text_receiver">Người nhận</string>
    <string name="error_permission_location">Vui lòng cấp quyền vị trí để tự động điền</string>
    <string name="text_field_phone">Vui lòng nhập số điện thoại</string>
    <string name="text_field_receiver">Vui lòng nhập người nhận</string>
    <string name="text_notification">Thông báo</string>

    <string name="title_bill_detail">Thông tin đơn hàng</string>
    <string name="text_info_delivery">Thông tin vận chuyển</string>
    <string name="text_location_delivery">Địa chỉ nhận hàng</string>
    <string name="text_view_voucher_ship">Giảm giá phí vận chuyển</string>
    <string name="text_view_voucher_shop">Giảm giá từ cửa hàng</string>
    <string name="text_view_total_bill">Thành tiền</string>
    <string name="text_view_time_order">Thời gian đặt hàng</string>
    <string name="text_view_time_confirm">Thời gian xác nhận</string>
    <string name="text_view_time_delivery">Thời gian vận đơn</string>
    <string name="text_view_time_success">Thời gian hoàn thành</string>
    <string name="text_contact_customer">Liên hệ khách hàng</string>
    <string name="text_default_price">0đ</string>
    <string name="text_amount">Số lượng %d</string>
    <string name="text_get_bill_failed">Có lỗi xảy ra khi lấy đơn hàng</string>
    <string name="text_info_id_bill">Mã đơn hàng</string>
    <string name="text_copy_success">Sao chép thành công</string>
    <string name="title_exit_app">Thoát ứng dụng !</string>
    <string name="message_exit_app">Bạn có muốn thoát ứng dụng không?</string>
    <string name="title_required_login">Yêu cầu đăng nhập</string>
    <string name="messsage_required_login">Cần đăng nhập để đặt hàng !</string>
    <string name="mess_get_location">Đã cập nhật</string>
</resources>
