<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar_back"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_toolbar_border_bottom"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

            <TextView
                android:id="@+id/text_view_title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_cart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_order_food_in_list_cart_frg"
            android:layout_below="@+id/tool_bar_back"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="8"
            tools:listitem="@layout/item_cart" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_order_food_in_list_cart_frg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_65dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_8dp"
            android:elevation="@dimen/_5dp"
            android:translationZ="@dimen/_6dp"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_main_green">

                <CheckBox
                    android:id="@+id/checkbox_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:buttonTint="@color/white"
                    android:checked="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_6dp"
                    android:layout_marginRight="@dimen/_6dp"
                    android:layout_toRightOf="@id/checkbox_all"
                    android:gravity="center"
                    android:text="@string/text_buy_all"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_6dp"
                    android:layout_marginRight="@dimen/_6dp"
                    android:layout_toLeftOf="@id/text_view_total_price"
                    android:text="@string/text_total"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/text_view_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_6dp"
                    android:layout_marginRight="@dimen/_8dp"
                    android:layout_toLeftOf="@id/text_view_button_order"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold"
                    tools:text="@string/string_default" />

                <TextView
                    android:id="@+id/text_view_button_order"
                    android:layout_width="@dimen/_80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@color/color_main_green_900"
                    android:gravity="center"
                    android:text="@string/text_order"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/layout_advertise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_book_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:padding="@dimen/_8dp"
                android:text="@string/text_cart_empty"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
